--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "node": ">= 0.10.0"
   },
   "dependencies": {
-    "grunt-composer": "^0.4.4"
+    "grunt-composer": "^0.4.4",
+    "grunt-contrib-clean": "^0.6.0"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
