--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "grunt-composer": "^0.4.4",
-    "grunt-contrib-clean": "^0.6.0"
+    "grunt-contrib-clean": "^0.6.0",
+    "grunt-file-creator": "^0.1.3",
+    "grunt-exec": "^0.4.6"
   },
   "devDependencies": {
     "grunt": "~0.4.5",
